--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,8 @@
+.wrapper {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 .homeTop {
   display: flex;
   justify-content: space-between;
@@ -14,10 +19,4 @@
   border: none;
   outline: none;
   cursor: pointer;
-}
-
-.imgGrid {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  grid-gap: 16px;
 }
