--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,11 +1,8 @@
 .container {
-  max-width: 960px;
   min-height: 100vh;
-  margin: 0 auto;
   background: #eee;
 }
 
 .main {
-  height: 100%;
-  padding: 1rem 0.5rem;
+  padding: 32px 16px;
 }
