--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -13,6 +13,8 @@
 .navigation a {
   padding: 6px 10px;
   display: inline-block;
+  font-weight: bold;
+  letter-spacing: 1px;
   text-decoration: none;
-  color: rgba(0, 0, 0, 0.8);
+  color: #f5f5f5;
 }
