--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,13 +10,12 @@
 }
 
 .btn {
-  padding: 4px 8px;
+  width: 40px;
+  height: 40px;
   background: cadetblue;
   color: #f5f5f5;
-  font-family: inherit;
-  font-weight: bold;
-  text-transform: uppercase;
   border: none;
-  outline: none;
+  border-radius: 4px;
+  outline: transparent;
   cursor: pointer;
 }
