--- a/styles/PhotoInfo.module.css
+++ b/styles/PhotoInfo.module.css
@@ -1,6 +1,11 @@
 .listItem {
   padding: 16px 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+  font-size: 0.875rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.listItemLast {
+  padding: 16px 0;
   font-size: 0.875rem;
 }
 
