--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,13 @@
 
 html,
 body {
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+h1 {
+  margin-bottom: 2rem;
 }
 
 a {
