--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,19 +3,23 @@
   margin: 0 auto;
 }
 
-.homeTop {
+.topMenu {
+  padding: 1rem 0;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 32px;
 }
 
 .btn {
-  width: 40px;
-  height: 40px;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: cadetblue;
-  color: #f5f5f5;
   border: none;
   border-radius: 4px;
-  outline: transparent;
+  outline: black;
+  color: #f5f5f5;
   cursor: pointer;
+  font-size: 1.5rem;
 }
