--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,20 +1,22 @@
 .navigation {
-  height: 80px;
+  height: 5rem;
   background-color: cadetblue;
 }
 .navigation ul {
   height: 100%;
+  padding-left: 0.5rem;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
   display: flex;
   align-items: center;
 }
 .navigation a {
-  padding: 6px 10px;
+  padding: 0.5rem 0.75rem;
   display: inline-block;
   font-weight: bold;
   letter-spacing: 1px;
   text-decoration: none;
   color: #f5f5f5;
+}
+.navigation li:nth-child(1) {
+  border-right: 1px solid rgba(255, 255, 255, 0.6);
 }
