--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,15 @@ h1 {
   margin-bottom: 2rem;
 }
 
+h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+p {
+  line-height: 2;
+}
+
 a {
   color: inherit;
 }
