--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -9,6 +9,9 @@
   display: flex;
   align-items: center;
 }
+.navigation li:nth-child(1) {
+  border-right: 1px solid rgba(255, 255, 255, 0.6);
+}
 .navigation a {
   padding: 0.5rem 0.75rem;
   display: inline-block;
@@ -16,7 +19,10 @@
   letter-spacing: 1px;
   text-decoration: none;
   color: #f5f5f5;
+  outline: transparent;
+  border: 3px solid transparent;
+  border-radius: 4px;
 }
-.navigation li:nth-child(1) {
-  border-right: 1px solid rgba(255, 255, 255, 0.6);
+.navigation a:focus {
+  border: 3px solid black;
 }
