--- a/styles/Photo.module.css
+++ b/styles/Photo.module.css
@@ -1,6 +1,9 @@
 .photo img {
   cursor: pointer;
 }
+.photo img:focus {
+  border: 3px solid black !important;
+}
 
 .iconClose {
   text-align: right;
