--- a/styles/TopMenu.module.css
+++ b/styles/TopMenu.module.css
@@ -13,8 +13,11 @@
   background: cadetblue;
   border: none;
   border-radius: 4px;
-  outline: black;
   color: #f5f5f5;
   cursor: pointer;
   font-size: 1.5rem;
+}
+.btn:focus {
+  border: 3px solid black;
+  outline: transparent;
 }
