--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .header p {
@@ -21,4 +21,10 @@
 
 .colourSpan {
   color: cadetblue;
+}
+
+@media (min-width: 600px) {
+  .header h1 {
+    font-size: 3rem;
+  }
 }
