--- a/styles/PhotoInfo.module.css
+++ b/styles/PhotoInfo.module.css
@@ -20,6 +20,11 @@
   color: #f5f5f5;
   cursor: pointer;
 }
+@media (hover) {
+  .listItemButton button:hover {
+    filter: brightness(1.2);
+  }
+}
 
 .attribution {
   text-align: right;
