--- a/styles/TopMenu.module.css
+++ b/styles/TopMenu.module.css
@@ -16,8 +16,14 @@
   color: #f5f5f5;
   cursor: pointer;
   font-size: 1.5rem;
+  box-shadow: 2px 3px 2px 0 rgba(0, 0, 0, 0.5);
 }
 .btn:focus {
   border: 3px solid black;
   outline: transparent;
+}
+@media (hover) {
+  .btn:hover {
+    filter: brightness(1.2);
+  }
 }
