--- a/styles/PhotoPage.module.css
+++ b/styles/PhotoPage.module.css
@@ -2,3 +2,23 @@
   max-width: 960px;
   margin: 0 auto;
 }
+
+.imgContainer {
+  position: relative;
+}
+.imgAlt {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0.25rem;
+  left: 0.25rem;
+  font-size: 0.875rem;
+  overflow: hidden;
+  opacity: 0;
+  animation: fade-in 0.3s forwards;
+}
+@keyframes fade-in {
+  to {
+    opacity: 1;
+  }
+}
