--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -15,9 +15,9 @@
   border-right: 1px solid rgba(255, 255, 255, 0.6);
 }
 .navigation a {
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem 0.5rem;
+  margin: 0 0.25rem;
   display: inline-block;
-  font-weight: bold;
   letter-spacing: 1px;
   text-decoration: none;
   color: #e5e5e5;
@@ -25,7 +25,7 @@
   border: 3px solid transparent;
   border-radius: 4px;
 }
-.navigation a:focus {
+.navigation a:focus-visible {
   border: 3px solid black;
 }
 @media (hover) {
