--- a/styles/TopMenu.module.css
+++ b/styles/TopMenu.module.css
@@ -16,9 +16,9 @@
   color: #f5f5f5;
   cursor: pointer;
   font-size: 1.5rem;
-  box-shadow: 2px 3px 2px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 3px 2px 0 rgba(0, 0, 0, 0.3);
 }
-.btn:focus {
+.btn:focus-visible {
   border: 3px solid black;
   outline: transparent;
 }
