--- a/styles/ImgWrapper.module.css
+++ b/styles/ImgWrapper.module.css
@@ -1,14 +1,19 @@
 .imgContainer {
+  display: inline-block;
   position: relative;
   opacity: 0;
   animation: fade-in 0.3s forwards;
 }
+.imgContainer div {
+  display: block !important;
+}
 .imgAlt {
   width: 100%;
   height: 100%;
+  padding: 0.5rem;
   position: absolute;
-  top: 0.25rem;
-  left: 0.25rem;
+  top: 0;
+  left: 0;
   font-size: 0.875rem;
   overflow: hidden;
   opacity: 0;
